syntax = "proto3";

option csharp_namespace = "XE.Dottor.gRPC.ComplexService.V1";

package XE.ComplexService.V1;

message SendMessageRequest {
    string id = 1;
	string from = 2;
    string message = 3;
	
}

message SendMessageReply {
    string messageId = 1;
	bool status = 2;
}

service Chat {
    rpc SendMessage(stream SendMessageRequest) returns (stream SendMessageReply);
}